commited to the new branch

--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -82,6 +82,7 @@ menu-active
                 {% else %}
                 
                 <p>No comment!</p>
+                <p>This is the new branch</p>
 
                 {% endif %}             
             </div>
