--- a/greensource_pages/templates/greensource_pages/commercial-solar.html
+++ b/greensource_pages/templates/greensource_pages/commercial-solar.html
@@ -43,10 +43,15 @@ menu-active
         <div class="row details">
             <div>
                 <p>
-                    We design, install and operate solar panels for commercial purposes ranging from offices, schools, hospitals, communities and markets places to serve our customers and
-                    increase our green energy production reducing carbon footprint resulting from man-made activities. Our design and specification are choosen from our customer's need along with customized
-                    lighting system to meet thier specific goals. <br />
-                    
+                     We design, install and operate solar panels for commercial purposes ranging from offices, schools, hospitals, SME's and
+                    markets places to serve customers in need of reliable energy source needed for business growth, sustainability and improved
+                    (ROI) Return on Investment. Our goal is to increase green energy production reducing carbon footprint in the workspace resulting
+                    from use of fossil fuels. Our installations are easy to operate, designed to meet safety standards, improve efficiency and
+                    ensures sustainability over time. We provide technical support and work smart to reach out directly with clients through
+                    one on one sales as well a number of other methods including phone consultations to provide suitable solutions based upon
+                    needs and desires of customer. A successful installation will create profit opportunities within your company/business, increasing
+                    the bottom line or revenue streams. With this much information at your disposal we can help you take advantage without spending
+                    money.
                 </p>
             </div>
         </div>
