--- a/greensource_pages/templates/greensource_pages/electrical-design.html
+++ b/greensource_pages/templates/greensource_pages/electrical-design.html
@@ -43,15 +43,17 @@ menu-active
         <div class="row details">
             <div>
                 <p>
-                    We design, install solar street lights for residential, offices, communities and markets places to serve our customers and
-                    increase our green energy production reducing carbon footprint in the process. Our design and specification are choosen from our customer's need along with customized
-                    lighting system to meet thier specific goals. <br />
-                    Our solar street lights are made of high quality PVC/PVC Composite materials that provide superior durability throughout
-                    the lifespan of the these reflective devices. They are sturdy, reliable and designed to give max illumination
-                    at night without any power loss or need when the sun goes down. Our street lights offer improved environmental aestetics and performance. our goal is
-                    to light up your space when needed and at the highest quality with our led installations that offer low voltage power
-                    creating beautiful lighting without pollution. We provide an amazing price guarantee with a one year warranty on all our project installations unless defects
-                    occur while under normal use conditions. Our team is ready when you need us and are available during our work hours.
+                     We design, install solar lights for residential, offices, communities and markets places to serve our customers and increase
+                    our green energy production reducing carbon footprint in the process. Our design and specification are choosen from our customer's
+                    need along with customized lighting system to meet thier specific goals.
+                    <br /> Our solar lights are made of high quality PVC/PVC Composite materials that provide superior durability throughout the lifespan
+                    of the these reflective devices. Our solar lights are strictly madeof LED BULBS providing brighter illumination at night,
+                    they energy efficient, They are sturdy, reliable and designed to give max illumination at night without any power loss or
+                    need when the sun goes down. We offer improved environmental aestetics and performance. our goal is to light up your space
+                    when needed and at the highest quality with our led installations that offer low voltage power creating beautiful lighting
+                    without pollution. We provide an amazing price offers with a one year warranty on all our project installations Our team
+                    is ready when you need us and are available during our work hours. The most important thing is the quality of our work as
+                    well as our customers satisfaction.
                 </p>
             </div>
         </div>
