--- a/greensource_pages/templates/greensource_pages/maintenance-service.html
+++ b/greensource_pages/templates/greensource_pages/maintenance-service.html
@@ -46,12 +46,15 @@ menu-active
 <div class="container padding">
     <div class="row details">
         <div>
-            <p>We carry out Retrofitting and maintenance services for Solar Energy Systems and Electrical Systems (after sales
-                support and services). We have a team of experienced technicians who are ready to assist you with your maintenance
-                needs. We troubleshoot your energy systems for potential defect and ensure your systems are back to its best
-                in performance. We do Troubleshooting, Cleaning of Solar Panels, Replacing faulty electrical devices and
-                Scheduling periodic maintenance. We also do maintenance service for third party systems installations. Our
-                goal is to ensure your systems are performing optimally and efficiently.
+            <p>We carry out Maintenance services for all Solar services we offer (after sales support and services). We have a team of experienced
+                solar energy specialist ready to assist with all maintenance needs. Carrying out maintenance operations is necessary
+                for a reliable and sustainable energy production and ensure optimum performance of your system. We schedule different
+                maintenance plan for our customer which includes: Preventive maintenance and corrective maintenance. Preventive maintenance
+                is done for systems still in operations and do not intend to eperience a breakdown before it is fixed. Corrective maintenance
+                is done when a system runs to failure before it is corrcted. Maintenance is necesary for all our installations to ensure
+                longeivity of the system, ensure the systems are efficient and functioning optimally. Our maintenance activities includes
+                cleaning of solar panels, replacing bad cables, cleaning batteries and replacing battery fluid for tubular batteries,
+                air pressure cleaning of electrical components, ensuring all cable are well fasted to thier terminal.
             </p>
         </div>
     </div>
