--- a/greensource_pages/templates/greensource_pages/off-grid-solar.html
+++ b/greensource_pages/templates/greensource_pages/off-grid-solar.html
@@ -43,22 +43,16 @@ menu-active
         <div class="row details">
             <div>
                 <p>
-                    We design, install solar street lights for residential, offices, communities and markets places to serve our customers and
-                    increase our green energy production reducing carbon footprint in the process. Our design and specification are choosen from our customer's need along with customized
-                    lighting system to meet thier specific goals. <br />
-                    Our solar street lights are made of high quality PVC/PVC Composite materials that provide superior durability throughout
-                    the lifespan of the these reflective devices. They are sturdy, reliable and designed to give max illumination
-                    at night without any power loss or need when the sun goes down. Our street lights offer improved environmental aestetics and performance. our goal is
-                    to light up your space when needed and at the highest quality with our led installations that offer low voltage power
-                    creating beautiful lighting without pollution. We provide an amazing price guarantee with a one year warranty on all our project installations unless defects
-                    occur while under normal use conditions. Our team is ready when you need us and are available during our work hours. We offer:
-                </p>
-                <ul>
-                    <li>Design and Installation</li>
-                    <li>Technical support</li>
-                    <li>Maintenance</li>
-                </ul>
-                <p>
+                    We design and install solar panels for off-grid applications where there is no coventional light grid in the environment.
+                    This application is meant for rural areas and farms that are not connected to the national grid. Solar panels are designed
+                    to generate more than enough power which are stored in the battery for later use mostly at night. We ensure our off-grid
+                    system are well designed and sized to cater for cloudy and raining days to meet the energy demand.
+                    <br /> We provide technical support and work smart to reach out directly with clients through one on one sales as well a number
+                    of other methods including phone consultations to provide suitable solutions based upon needs and desires of customer.
+                    We are committed to providing the best customer service in terms of both product performance, pricing options, ensuring
+                    you can truly customize your system with desired specification that meet or exceed all goals. Our aim is always for our
+                    customer's financial satisfaction, while ensuring we can achieve thier long-term energy goals and return on investment
+                    in areas not connected to the grid.
                 </p>
             </div>
         </div>
@@ -66,7 +60,7 @@ menu-active
 <div class="container-fluid padding">
         <div class="row base">
             <div class="order-list col-lg-5 col-md-6 col-xs-12">
-                <h4>Our Street lighting service includes:</h4>
+                <h4>Our off-grid includes:</h4>
                 <ol>
                         <li>Operations</li>
                         <li>Day use System</li>
