--- a/greensource_pages/templates/greensource_pages/solar-design.html
+++ b/greensource_pages/templates/greensource_pages/solar-design.html
@@ -47,92 +47,19 @@ menu-active
     <div class="row details">
         <div>
             <p>
-                We offer design and installation solar panels for residential, commercial, farms and market solar energy systems. Our installation
-                ranges from mini system to large commercial scale projects with a small shop, home builder and business owner in mind. This
-                enables us to meet customers requirements and create the perfect solution that suits best. We provide both technical services
-                and professional customer care including installing solar panels using best technology available, with all our installed solar panel
-                systems being maintained accordingly as planned. We are focused on reducing carbon emission to the bearest minimum ensuring everyone enjoys
-                the benefit of our green energy solutions through the use of solar panels. Upon installation, our solar energy system will reduce your electricity and fossil fuel cost by upto 50%, this will
-                help improve economic productivity allowing you not only avoid pollution, but also help save money. We believe our clients
-                can make an impact in improving thier community eco-systems with renewable energy technologies. Our team are ready if you
-                need help planning out a solar panel installation project.
+                We design and install and operate solar panels for residential solar energy systems. We believe a home should be a place
+                of comfort, hence we help you find the best system that suits your need to ensure your property is powered efficiently
+                at all times. At Greensource Energy we are focused on helping home owners choose thier Solar System based on affordability.
+                Our team will manage every step of the design process of each components, this will help customers know exactly what
+                capacity will meet thier needs from power generated down to consumption. We have over time supply designs to homes with
+                an average capacity to generate 2kW when installed on their roofs. Our business is focused around providing reliable
+                service at competitive rates from start to finish. We are committed to providing the best customer service in terms of
+                both product performance, pricing options, ensuring you can truly customize your system with desired specification that
+                meet or exceed all goals.
             </p>
         </div>
     </div>
 </div>
-<!-- <div class="container padding">
-    <div class="solar">
-            <p>
-                    <strong>Our solar panels and solar energy system can be used for different applications including:- </strong>
-                </p>
-        <div class="col-lg-5 col-md-6 col-xs-12 single-about-style-two clearfix">
-            <div class="image-block">
-                <img src="{% static 'images/blue-gray.jpg' %}" alt="Residential solar system installation" />
-                <div class="overlay">
-                    <div class="box">
-                        <div class="content">
-                            <div class="dotted"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-block">
-                <h3>Residential</h3>
-                <p>A home should be a place of comfort, So we have custom fit designs to suit everyone </p>
-            </div>
-        </div>
-        <div class="col-lg-5 col-md-6 col-xs-12 single-about-style-two clearfix">
-            <div class="image-block">
-                <img src="{% static 'images/black-metal.jpg' %}" alt="Off-grid solar system installation" />
-                <div class="overlay">
-                    <div class="box">
-                        <div class="content">
-                            <div class="dotted"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-block">
-                <h3>Commercial</h3>
-                <p>Our solar energy systems Save cost and increasing profits which is very critical for business growth. 
-                </p>
-            </div>
-        </div>
-        <div class="col-lg-5 col-md-6 col-xs-12 single-about-style-two clearfix">
-            <div class="image-block">
-                <img src="{% static 'images/corn-plant.jpg' %}" alt="agro-solar system installation" />
-                <div class="overlay">
-                    <div class="box">
-                        <div class="content">
-                            <div class="dotted"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-block">
-                <h3>Farms</h3>
-                <p>We have designs for farm use including irrigation, fishery, production and farmhouse.</p>
-            </div>
-        </div>
-        <div class="col-lg-5 col-md-6 col-xs-12 single-about-style-two clearfix">
-            <div class="image-block">
-                <img src="{% static 'images/Institution.jpg' %}" alt="commercial solar system installation" />
-                <div class="overlay">
-                    <div class="box">
-                        <div class="content">
-                            <div class="dotted"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="text-block">
-                <h3>Institution</h3>
-                <p>Designed for schools, health care facilities, training centers, religous centers.</p>
-            </div>
-        </div>
-    </div>
-</div> -->
-
 <div class="container-fluid padding">
     <div class="row base">
         <div class="order-list col-lg-5 col-md-5 col-xs-12">
