--- a/greensource_pages/templates/greensource_pages/solar-water-pump.html
+++ b/greensource_pages/templates/greensource_pages/solar-water-pump.html
@@ -43,14 +43,16 @@ menu-active
         <div class="row details">
             <div>
                 <p>
-                     We design and install solar submersible and surface pump for residential, commercial and agricultural activities.Our solar
-                    pumps are designed to produce electricity independently without batteries. This work is in progress of creating the most
-                    eco-friendly system we can to deliver clean energy at a reasonable price while reducing environmental impact of fossil fuels
-                    and cutting down on the cost of rising fuels. Our design and installation is cost-effective in maintaining normal living
-                    conditions for residential purpose (domestic use), commercial purposes like community borehole, production needing water,
-                    agricultural production for irrigation, fishery activities, poultry and other farm activities. Our systems installation are
-                    proven to meet the highest safety standards, very efficient and easy to operate by all. We ensure quality is the end product
-                    of our services and they are cost effective.
+                    Solar submersible and surface pump is fast becoming a means for getting water from wells and boreholes as it reduces cost
+                    of burning fossil fuels and provides energy secuirty. We design and install for residential, commercial and more importantly
+                    agricultural activities. Our solar pumps are designed to produce electricity to lift water from wells using energy of
+                    the sun. We are committed to creating an eco-friendly system which can deliver clean energy at a reasonable price while
+                    reducing environmental impact of fossil fuels and cutting down on the cost of rising cost of fuels. Our design and installation
+                    is cost-effective in maintaining normal living conditions as it is guaranteed to give u water every single day irrespective
+                    of the weather cloudy, sunny or even when it rains. It can be used for residential purpose (domestic use), commercial
+                    purposes like community borehole, manufacturing production needing water, agricultural activities like irrigation, fishery
+                    activities, poultry and other farm work. Our systems installation are proven to meet the highest safety standards, very
+                    efficient and easy to operate by all. We ensure quality is the end product of our services and they are cost effective.
                 </p>
             
             </div>
