--- a/greensource_pages/templates/greensource_pages/hvac.html
+++ b/greensource_pages/templates/greensource_pages/hvac.html
@@ -47,37 +47,17 @@ menu-active
     <div class="row details">
         <div>
             <p>
-                We offer full solar system upgrade of any capacity, including upgrade of component parts to boost output performance. we
-                will upgrade your system to a solar station to effectively supply electrical self sufficiency to it users
-                and also provide you with great services on all aspects of your system upgrade.
+                Solar energy system upgrade is an aspect of solar PV system gaining momentum. We design our solar energy system such that
+                its energy capacity can be increased when load consumption also increases. Greensource Energy considers customers who
+                intend to purchase and install solar energy system of a higher capacity but can't at the moment to start with a system
+                of lower energy capacity and over time increase thier energy capacity. Also clients who who needs to upgrade thier system
+                based on performance of thier previous solar energy system can do so. We are dedicated to increasing clean energy generation
+                and its sustainability. Upgrading your solar system will improve its overall design, achieve significant improvement,
+                improve performance value when compared with previous solar energy system. hence lead to increased green energy generation,
+                reduce emissions from fossil fuels, provide energy security, increase power output in a highly efficient way. This option
+                of services is opened to all customers both Residential and commerical.
             </p>
         </div>
-        <!-- <div class="sub-section row">
-                <div class="body col-xs-12 col-md-6 col-lg-4">
-                    <div>
-                        <i class="fas fa-walking"></i>
-                    </div>
-                    <h4>ENERGY AUDIT</h4>
-                    <p class="sub">Identifies deficient equipment issues, areas needing further evaluation, energy saving opportunities and
-                        saving potentials</p>
-                </div>
-                <div class="body col-xs-12 col-md-6 col-lg-4">
-                    <div>
-                        <i class="fas fa-chart-area"></i>
-                    </div>
-                    <h4>LOAD ANALYSIS</h4>
-                    <p class="sub">Audit is carried out using economic calculations using some devices like meters to identify your actual energy
-                        consumption and losses.</p>
-                </div>
-                <div class="body col-xs-12 col-md-6 col-lg-4">
-                    <div>
-                        <i class="fas fa-chart-pie"></i>
-                    </div>
-                    <h4>ENERGY SAVINGS</h4>
-                    <p class="sub">Identifies detailed account of energy use, qualitative study, detailed investments, operations and maintenance
-                        cost and analysis of investment.</p>
-                </div>
-            </div> -->
     </div>
 </div>
 <div class="container padding">
