--- a/greensource_pages/templates/greensource_pages/project-management.html
+++ b/greensource_pages/templates/greensource_pages/project-management.html
@@ -58,32 +58,6 @@ menu-active
                 amongst others. Our management services will provide continuous improvement on energy efficiency and cost
                 savings for residential, commercial, and industrial applications.</p>
         </div>
-        <!-- <div class="sub-section row">
-            <div class="body col-xs-12 col-md-6 col-sm-6 col-lg-4">
-                <div>
-                    <i class="fas fa-walking"></i>
-                </div>
-                <h4>ENERGY AUDIT</h4>
-                <p class="sub">Identifies deficient equipment issues, areas needing further evaluation, energy saving opportunities and
-                    saving potentials</p>
-            </div>
-            <div class="body col-xs-12 col-md-6 col-sm-6 col-lg-4">
-                <div>
-                    <i class="fas fa-chart-area"></i>
-                </div>
-                <h4>LOAD ANALYSIS</h4>
-                <p class="sub">Audit is carried out using economic calculations using some devices like meters to identify your actual energy
-                    consumption and losses.</p>
-            </div>
-            <div class="body col-xs-12 col-md-6 col-sm-6 col-lg-4">
-                <div>
-                    <i class="fas fa-chart-pie"></i>
-                </div>
-                <h4>ENERGY SAVINGS</h4>
-                <p class="sub">Identifies detailed account of energy use, qualitative study, detailed investments, operations and maintenance
-                    cost and analysis of investment.</p>
-            </div>
-        </div> -->
     </div>
 </div>
 <div class="container padding">
@@ -99,7 +73,7 @@ menu-active
             </ol>
         </div>
         <div class="order-list col-lg-5 col-md-6 col-xs-12">
-            <img src="{% static 'images/vvv.jpg' %}" />
+            <img src="{% static 'images/bulb.jpg' %}" />
         </div>
     </div>
 </div>
