--- a/contact_us/templates/contact_us/success.html
+++ b/contact_us/templates/contact_us/success.html
@@ -34,7 +34,7 @@ menu-active
 <div class="container padding">
     <div class="thank-you-home row padding">
         <div class="col-lg-12">
-            <a href="{% url 'index' %}" role="button">GO BACK HOME</a>   
+            <a href="{% url 'index' %}" role="button">Go Back Home</a>   
         </div>
     </div>
 </div>
