--- a/contact_us/templates/contact_us/contact.html
+++ b/contact_us/templates/contact_us/contact.html
@@ -41,7 +41,7 @@ menu-active
 <div class="container padding">
     <div class="content text-center">
         <div id="contact-form" class="col-xs-12 col-md-12 col-lg-9">
-                <form action="contact-us" method="POST">
+                <form action="" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="form-group col-md-6 mb-0">
@@ -51,11 +51,11 @@ menu-active
                             {{ form.last_name|as_crispy_field }}
                         </div>
                         <div class="form-group col-md-6 mb-0">
-                                {{ form.from_email|as_crispy_field }}
-                            </div>
+                            {{ form.from_email|as_crispy_field }}
+                        </div>
                         <div class="form-group col-md-6 mb-0">
-                                {{ form.phone|as_crispy_field }}
-                            </div>
+                            {{ form.phone|as_crispy_field }}
+                        </div>
                         <div class="form-group col-md-6 mb-0">
                             {{ form.city|as_crispy_field }}
                         </div>
@@ -63,8 +63,8 @@ menu-active
                             {{ form.state|as_crispy_field }}
                         </div>
                         {{ form.message }}
-                        </div>
-                    <button type="submit" name="submit" class="btn">send Message</button>
+                    </div>
+                    <button type="submit" name="submit" class="btn">Send Message</button>
                 </form>
                 <p>*please note that we do not rent or sell your information to any third parties! Refer to our <a href="{% url 'privacy' %}"><strong>Privacy Policy</strong></a> for more details*</p>
             </div>
