--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -162,7 +162,7 @@
         <div class="row">
                 <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Want to start a custom fit Project for your home/business? &nbsp Talk to an Authorized Solar Professional.</p>
                 <h3 class="col-lg-3 col-md-4 col-xs-12">
-                <a href="{% url 'contact_us' %}">get in touch
+                <a href="{% url 'contact_us' %}">Get in Touch
                     <i class="fas fa-arrow-right"></i>
                 </a>
                 </h3>
@@ -383,7 +383,7 @@
                     <img src="{% static 'images/onifade.png' %}" alt="Marketing Lead">
                     <div class="team-text">
                         <h5>Onifade Dolapo</h5>
-                        <p>MArketing Lead</p>
+                        <p>Marketing Lead</p>
                     </div>
                 </div>
             </div>
