--- a/greensource_pages/templates/greensource_pages/energy-management.html
+++ b/greensource_pages/templates/greensource_pages/energy-management.html
@@ -85,7 +85,7 @@ menu-active
         <div class="row">
                 <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Want to start a custom fit Project for your home/business? &nbsp Talk to an Authorized Solar Professional.</p>
                 <h3 class="col-lg-3 col-md-4 col-xs-12">
-                <a href="{% url 'contact_us' %}">get in touch
+                <a href="{% url 'contact_us' %}">Get in Touch
                     <i class="fas fa-arrow-right"></i>
                 </a>
                 </h3>
