--- a/greensource_pages/templates/greensource_pages/solar-design.html
+++ b/greensource_pages/templates/greensource_pages/solar-design.html
@@ -47,7 +47,7 @@ menu-active
     <div class="row details">
         <div>
             <p>
-                We design and install and operate solar panels for residential solar energy systems. We believe a home should be a place
+                We design and install and operate solar panels for residential solar energy systems. We believe a home should be a placeour
                 of comfort, hence we help you find the best system that suits your need to ensure your property is powered efficiently
                 at all times. At Greensource Energy we are focused on helping home owners choose thier Solar System based on affordability.
                 Our team will manage every step of the design process of each components, this will help customers know exactly what
@@ -75,7 +75,7 @@ menu-active
         <div class="order-list col-lg-5 col-md-7 col-xs-12">
             <img src="{% static 'images/blue-gray.jpg' %}" alt="residential building" />
         </div>
-    </div>
+    </div> 
 </div>
 
 <section id="call-to-action">
@@ -83,7 +83,7 @@ menu-active
         <div class="row">
                 <p class="col-lg-9 col-md-8 col-xs-12 cta-text">Want to start a custom fit Project for your home/business? &nbsp Talk to an Authorized Solar Professional.</p>
                 <h3 class="col-lg-3 col-md-4 col-xs-12">
-                <a href="{% url 'contact_us' %}">get in touch
+                <a href="{% url 'contact_us' %}">Get in Touch
                     <i class="fas fa-arrow-right"></i>
                 </a>
                 </h3>
