--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base_layout.html' %}
+{% load crispy_forms_tags %}
 {% block nav-news %}
 menu-active
 {% endblock %}
@@ -30,7 +31,7 @@ menu-active
                 <img src="{{ post.thumb.url }}" class="card-img-top" alt="blog image" />
                 <p> | &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
                 <div class="card-body">
-                    <small class="text-muted"><i class="fas fa-user"></i> Admin  &nbsp; &nbsp;<i class="far fa-heart"></i> 2&nbsp; &nbsp;<i class="far fa-comments"></i> {{ count }}</small>
+                    <small class="text-muted"><i class="fas fa-user"></i> Admin &nbsp; &nbsp;<i class="far fa-comments"></i> {{ count }}</small>
                     <h5 class="card-title">{{post.short_description}}</h5>
                     <p class="card-text">
                         {{ post.body }}
@@ -90,26 +91,22 @@ menu-active
         
 <div class="container padding">
     <h6 class="comment-header">leave a comment</h6>
-    <form action="" method="POST">
-        <div class="comment row padding">
-
-            <div class="form-row col-lg-8 col-md-12 col-xs-12">
-
-                {% csrf_token %} {{ comment_form.as_p }}
-                <!-- <div class="col">
-                
-                {{ comment_form.name }}
+    <div class="comment  col-lg-8 col-md-12 col-xs-12">
+        <form action="" method="POST">
+            {% csrf_token %}
+            <div class="form-row">
+                <div class="form-group col-md-6 mb-0">
+                    {{ comment_form.name|as_crispy_field }}
+                </div>
+                <div class="form-group col-md-6 mb-0">
+                    {{ comment_form.email|as_crispy_field }}
+                </div>
+                {{ comment_form.content }}
+                <button type="submit" name="submit" class="form-control">Send Message</button>
             </div>
-            <div class="col">
-                
-                {{ comment_form.email }}
-            </div>
-            <label for="Message"></label>
-            
-                {{ comment_form.content }} -->
-                <button type="submit" class="form-control">Send Message</button>
-            </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
+
+
 {% endblock %}
