--- a/news/templates/article_list.html
+++ b/news/templates/article_list.html
@@ -32,7 +32,7 @@ menu-active
                     <img src="{{post.thumb.url}}" class="card-img-top" alt="blog image" />
                     <p> | &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
                     <div class="card-body">
-                        <small class="text-muted"><i class="fas fa-user"></i> Admin  &nbsp; &nbsp;<i class="far fa-heart"></i> 23&nbsp; &nbsp;<i class="far fa-comments"></i> 3</small>
+                        <small class="text-muted"><i class="fas fa-user"></i> Admin &nbsp; &nbsp;<i class="far fa-comments"></i> {{ post.comments.count }}</small>
                         <a href="{{ post.get_absolute_url }}"><h5 class="card-title">{{ post.title }}</h5></a>
                     </div>
                 </div>
