--- a/staticfiles/home.css
+++ b/staticfiles/home.css
@@ -354,13 +354,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 	margin-top: 20px;
 	width: 160px;
 	margin-left: 5px;
-	padding: 15px 10px;
-	text-transform: uppercase;
-	border: 1px solid #006420;
+	padding: 15px 15px;
+	border: 2px solid #7f8284;
+	border-radius: 100px;
 	animation-delay: 2s;
 }
-.carousel-caption .btn:hover{
-	background:#006420;
+.carousel-caption .button .btn:hover{
+	background: #002c42;
 	color:#fff;
 }
 .carousel-caption .button .active{
@@ -777,6 +777,9 @@ nav .breadcrumb li a:hover{
 	text-transform: uppercase;
 	text-decoration: none;
 	font-weight: 550;
+	border-style: solid;
+	border-radius: 50px;
+	transition: .3s;
 }
 .about-us a:hover{
 	background: #001f3f;
@@ -1071,26 +1074,24 @@ nav .breadcrumb li a:hover{
 	margin-top: 30px;
 }
 #call-to-action h3 a{
-	color: #cdcdcd;
+	color: #fff;
 	text-decoration: none;
-	text-transform: uppercase;
 	letter-spacing: 1px;
-	background: #006420;
 	font-weight: 600;
+	border: 2px solid #006420;
+	border-radius: 100px;
 	font-size: 20px;
-	padding: 15px 12px;
-	border-radius: 5px;
+	padding: 15px 15px;
 	transition: 0.5s;
 }
 #call-to-action h3 a:hover {
-  background: #001f3f;
+  background: #006420;
   color:#cdcdcd;
-  border: 2px solid #001f3f;
   text-decoration: none;
 }
 #call-to-action h3 i{
 	margin-left: 10px;
-	color: #cdcdcd;
+	color: #fff;
 }
 /*--------------------------------------------------------------
 # PROJECTS
@@ -1185,11 +1186,6 @@ nav .breadcrumb li a:hover{
 	border-radius: 100%;
 	padding: 5px 5px;
 	margin-right: 10px;
-}
-
-.video video controls{
-	width: 620px;
-	height: 350px;
 }
 /*--------------------------------------------------------------
 # TEAM SECTION
@@ -2102,11 +2098,11 @@ nav .breadcrumb li a:hover{
 	height: 60px; 
 	margin: 15px 0px; 
 	padding: 10px 10px;
-	background:#006420;
-	color: #cdcdcd; 
+	border: 2px solid #006420;
+	border-radius: 100px;
+	color: #006420; 
 	font-size: 15px; 
-	font-weight: 550;
-	text-transform: uppercase;
+	font-weight: 550; 
 }
 #contact-form button:hover{
 	background: #001f3f; 
@@ -2154,11 +2150,11 @@ nav .breadcrumb li a:hover{
 }
 .thank-you-home a{
 	font-size: 18px;
-	padding: 15px 15px;
-	background:#006420;
-	color:#cdcdcd;
-	border-radius: 5px;
-	
+	padding: 15px 25px;
+	border: 2px solid #006420;
+	border-radius: 100px;
+	color:#006420;	
+	transition:.3s;
 }
 .thank-you-home a:hover{
 	background:#001f3f;
@@ -2489,14 +2485,15 @@ nav .breadcrumb li a:hover{
 .testimony .title-block .sec-title a{
 	font-size: 15px;
 	font-weight: bold;
-	text-transform: uppercase;
 	text-decoration: none;
-	background: #006420;
-	padding: 30px 30px;
-	color: #fff;
+	border: 2px solid #006420;
+	border-radius: 100px;
+	padding: 20px 30px;
+	color: #006420;
+	width: 100%;
 }
 .testimony .title-block .sec-title a:hover{
-	background: #001f3f;
+	background: #006420;
 	color: #fff;
 	transition: .5s;
 	transition-delay: .1s;
@@ -3021,19 +3018,44 @@ nav .pagination a:hover{
 	color: #fff;
 	background: #006420;
 }
-.comment .form-row{
-	justify-content:justify;
-	width:100%;
-}
-.form-row input{
-	width:100%;
-}
 .comment-header{
-	margin-top:80px;
-	font-weight:bold;
-	text-transform:uppercase;
-	font-size:20px;
+	margin-top: 80px;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size: 20px;
 	font-family: 'Big Shoulders Text', cursive;
+}
+.comment input{
+	width: 100%;
+	border-radius: 0px;
+	border: 1px solid grey;
+	box-shadow: none;
+	font-size: 15px;
+	height: 55px;
+}
+.comment .form-row textarea{
+	border: 1px solid grey;
+	box-shadow: none;
+	font-size: 15px;
+	width: 100%;
+	height: 200px;
+}
+.comment .form-row button{
+	width: 200px; 
+	height: 60px; 
+	margin-top: 25px; 
+	padding: 10px 10px;
+	border: 2px solid #001f3f;
+	border-radius: 100px;
+	color: #006420; 
+	font-size: 15px; 
+	font-weight: 550;
+	transition: .3s;
+}
+.comment button:hover{
+	background: #006420; 
+	color: #cdcdcd; 
+	transition: .3s;
 }
 .news1 p{
 	margin:20px 30px;
@@ -4353,21 +4375,6 @@ nav .pagination a:hover{
 		width: 65%;
 		height: 320px;
 	}
-	.comment form{
-		width:100%;
-	}
-	.comment input{
-		width:100%;
-	}
-	.comment .form-row{
-		width:100%;
-	}
-	.form-row input{
-		width:100%;
-	}
-	.comment form textarea{
-		width:100%;
-	}
 	.testimonials-style-three-carousel-wrapper{
 		width: 95%;
 		height: 90%;
@@ -5192,15 +5199,6 @@ nav .pagination a:hover{
 		margin-left: auto;
 		margin-right: auto;
 	}
-	.comment .form-row{
-		width:100%;
-	}
-	.form-row input{
-		width:100%;
-	}
-	.comment form textarea{
-		width:100%;
-	}
 	.single-testimonial-style-three .client-block{
 		width: 100%;
 	}
@@ -5705,15 +5703,6 @@ nav .pagination a:hover{
 		margin-bottom: 10%;
 	}
 	.address iframe{
-		width: 100%;
-	}
-	.comment .form-row{
-		width: 100%;
-	}
-	.form-row input{
-		width: 100%;
-	}
-	.comment form textarea{
 		width: 100%;
 	}
    .testimony .title-block .sec-title p{
@@ -6499,16 +6488,6 @@ nav .pagination a:hover{
 	}
 	.list-unstyled .media .media-body p span{	
 		font-size: 14px;
-	}
-	.comment .form-row{
-		width:100%;
-	}
-	.form-row input{
-		width:100%;
-	}
-	.comment form textarea{
-		width:100%;
-		font-weight: 500;
 	}
 	.project img{
 		width: 100%;
